# grocery-list

./: MANIFEST.in  README.md  setup.cfg
grocerylist/: admin.py  forms.py  models.py  urls.py  views.py
grocerylist/migrations/: 0001_initial.py  0002_recipe_unit_ingredient.py  0003_load_units.py
grocerylist/recipe_entry/: conversion.py  ingredients.py  unit_conversion.py
grocerylist/templates/grocerylist/: base.html  delete_list.html  edit_list.html  index.html  new_entry_form.html  new_list.html  new_recipe.html  sort.html
grocerylist/tests/: test_delete_list.py  test_index.py  test_items_in_list.py  test_new_lists.py  test_sort.py
grocerylist/tests/recipe_entry/: test_ingredient_extraction.py  test_unit_conversion.py
grocerylist/views/: add_common_items.py  delete_entry.py  delete_list.py  edit_list.py  index.py  new_list.py  new_recipe.py  sorted_view.py
